--- a/Chinese_Traditional.lng
+++ b/Chinese_Traditional.lng
@@ -1,7 +1,7 @@
 |~LANGUAGENAME|
 |繁體中文(臺灣)|
 |~LANGUAGEVERSION|
-|1.33 - 1|
+|1.34 - 1|
 |~LANGUAGEAUTHOR|
 |高祥元 (Kao Shiang-Yuan)|
 |~LANGUAGEAUTHOREMAIL|
@@ -892,7 +892,7 @@
 |成功|
 |Invalid parameter|
 |無效的參數|
-|Too little memory (RAM) available|
+|Out of memory|
 |記憶體不足|
 |Invalid/wrong key|
 |無效/錯誤的鑰匙|
@@ -1344,6 +1344,10 @@
 |產生的密碼包含其他欄位的參照。使用這個密碼時，將使用參照欄位的內容。也就是說，每次複製或自動輸入的密碼可能不一樣。|
 |The regular expression is invalid.|
 |這個正規表達式無效。|
+|Failed to attach file:|
+|附加檔案失敗：|
+|The attachment is too large|
+|附件過大|
 |~LANGISO6391CODE|
 |zh|
 |About KeePass|
