--- a/Chinese_Simplified.lng
+++ b/Chinese_Simplified.lng
@@ -1,8 +1,8 @@
-﻿2017-05-27 01:33
+﻿2017-10-20 01:34
 |~LANGUAGENAME|
 |简体中文|
 |~LANGUAGEVERSION|
-|1.30|
+|1.34|
 |~LANGUAGEAUTHOR|
 |Leo Dou @ CCF|
 |~LANGUAGEAUTHOREMAIL|
@@ -777,7 +777,7 @@
 |成功|
 |Invalid parameter|
 |无效的参数|
-|Too little memory (RAM) available|
+|Out of memory|
 |内存不足|
 |Invalid/wrong key|
 |无效/错误的密匙|
@@ -1363,3 +1363,7 @@
 |正则表达式无效。|
 |Tray icon|
 |托盘图标|
+|Failed to attach file:|
+|添加附件失败:|
+|The attachment is too large|
+|附件太大|
